our portfolio title alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@ a {
 
 .fourth-section-title {
   margin-bottom: 72px;
+  text-align: center;
 }
 
 .fourth-section-list {
